project reference link updated

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                                 <div>
                                     <span class="projects__subtitle">Data Analysis</span>
                                     <h3 class="projects__title">IDP INTENTION SURVEY</h3>
-                                    <a href="#" class="projects__button button button__small">
-                                        <i class="ri-link">https://dtm.iom.int/reports/nigeria-benue-state-idp-intention-survey-august-2025</i>
+                                    <a href="https://dtm.iom.int/reports/nigeria-benue-state-idp-intention-survey-august-2025" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
                                     </a>
                                 </div>
                             </div>
@@ -123,8 +123,8 @@
                                 <div>
                                     <span class="projects__subtitle">DATA ANALYSIS</span>
                                     <h3 class="projects__title">IDP SOCIOECONOMIC SURVEY</h3>
-                                    <a href="#" class="projects__button button button__small">
-                                        <i class="ri-link">https://dtm.iom.int/reports/nigeria-idp-socio-economic-assessment-benue-state-august-2025</i>
+                                    <a href="https://dtm.iom.int/reports/nigeria-idp-socio-economic-assessment-benue-state-august-2025" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
                                     </a>
                                 </div>
                             </div>
